Fix value-time margin alignment

--- a/nft-card/styles.css
+++ b/nft-card/styles.css
@@ -15,11 +15,10 @@ html {
 
     /* Removes horizontal scroll on page */
     overflow-y: hidden;
-
-    border: 2px solid orangered;
 }
+
 h3 {
-    color: white;
+    color: whitesmoke;
     font-size: 25px;
 }
 
@@ -38,11 +37,10 @@ hr {
 .container {
     height: 750px;
     width: 450px;
-    padding: 25px;
+    padding: 30px;
     box-sizing: border-box;
     border-radius: 15px;
     background-color: hsl(216, 50%, 16%);
-    border: 2px solid pink;
 
     display: flex;
     flex-direction: column;
@@ -56,9 +54,30 @@ hr {
     max-width: 100%;
 }
 
+.main-para {
+    margin: 0 auto 13px auto;
+    font-size: 23px;
+    font-weight: 300;
+}
+
 .value-time {
     display: flex;
     justify-content: space-between;
+}
+
+.value {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.value-image {
+    float: left;
+}
+
+.value-para {
+    margin: 0 0 0 8px;
+    float: right;
 }
 
 .eth {
@@ -67,14 +86,25 @@ hr {
 
 .profile {
     display: flex;
-    justify-content: space-between;
+    justify-content: left;
+    box-sizing: border-box;
+    margin: 5px 0 5px 0;
 }
 
 .profile-image {
-    height: 30px;
-    width: 30px;
+    height: 33px;
+    width: 33px;
+    border-radius: 50%;
+    border: 1px solid whitesmoke;
+}
+
+.profile-description {
+    display: flex;
+    align-items: center;
+    margin: 0 0 0 25px;
+    letter-spacing: 0.5px;
 }
 
 .name {
-    color: white;
+    color: whitesmoke;
 }
